#174 Fix for image and caption alignment for firefox/safari

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -195,6 +195,11 @@
   }
   .image-with-quote-and-paragraph {
 
+    img{
+      height: auto !important;
+      width: auto !important;
+    }
+
     .image-content {
 
       &.image-align-left {
